[gd_scene load_steps=10 format=3 uid="uid://oasns4fb3vda"]

[ext_resource type="Script" path="res://ui/moveable_document.gd" id="1_b2pv4"]
[ext_resource type="Texture2D" uid="uid://j0xw2p5dmgah" path="res://asset/sprite/ui/guidebook_cover.png" id="1_ucjtt"]
[ext_resource type="Texture2D" uid="uid://bmy07teg0e25r" path="res://asset/sprite/ui/guidebook_paper_full.png" id="2_gh52f"]
[ext_resource type="FontFile" uid="uid://b2q8817lu0td7" path="res://asset/font/RobotoMono-VariableFont_wght.ttf" id="3_qub8w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_530yy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xpwve"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h0jec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mbhsw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l64f3"]

[node name="Guidebook" type="TabContainer"]
offset_right = 198.0
offset_bottom = 256.0
tabs_visible = false
script = ExtResource("1_b2pv4")
multiple_pages = true

[node name="Cover" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("1_ucjtt")

[node name="NextPageButton" type="Button" parent="Cover"]
layout_mode = 0
offset_left = 168.0
offset_top = 232.0
offset_right = 200.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="Page1-2" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_gh52f")

[node name="Label" type="Label" parent="Page1-2"]
layout_mode = 2
offset_left = 222.0
offset_top = 32.0
offset_right = 376.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 14
text = "TABLE OF CONTENT
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Page1-2"]
layout_mode = 2
offset_left = 222.0
offset_top = 104.0
offset_right = 374.0
offset_bottom = 161.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 12
text = "Rules.............3-6
Terminology.......7-8
Local map.........9-10"

[node name="Label3" type="RichTextLabel" parent="Page1-2"]
layout_mode = 2
offset_left = 22.0
offset_top = 16.0
offset_right = 174.0
offset_bottom = 200.0
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_qub8w")
theme_override_fonts/bold_font = ExtResource("3_qub8w")
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 12
bbcode_enabled = true
text = "[center][b]BORDER CONTROL INSPECTOR GUIDEBOOK[/b]
Serial Number: 7823-ARMM-2000[/center]




[font_size=6][center]
Not for Public Distribution
All rights reserved. No part of this manual may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the Government, except in the case of brief quotations embodied in critical reviews and certain other noncommercial uses permitted by copyright law. For permission requests, contact the Government.
[/center][/font_size]"
fit_content = true
scroll_active = false
autowrap_mode = 2

[node name="NextPageButton" type="Button" parent="Page1-2"]
layout_mode = 0
offset_left = 366.0
offset_top = 232.0
offset_right = 398.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PreviousPageButton" type="Button" parent="Page1-2"]
layout_mode = 0
offset_left = -2.0
offset_top = 232.0
offset_right = 30.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PageCount" type="Label" parent="Page1-2"]
layout_mode = 2
offset_left = 94.0
offset_top = 240.0
offset_right = 104.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "1"
horizontal_alignment = 1

[node name="PageCount2" type="Label" parent="Page1-2"]
layout_mode = 2
offset_left = 286.0
offset_top = 240.0
offset_right = 296.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "2"
horizontal_alignment = 1

[node name="Page3-4" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_gh52f")

[node name="Label" type="Label" parent="Page3-4"]
layout_mode = 0
offset_left = 70.0
offset_top = 8.0
offset_right = 119.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Rules"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Page3-4"]
layout_mode = 0
offset_left = 278.0
offset_top = 8.0
offset_right = 327.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Rules"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Page3-4"]
layout_mode = 0
offset_left = 14.0
offset_top = 40.0
offset_right = 182.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 10
text = "Rule #1: ID documents must be valid:
	- Photo must matched.
	- ID must not expired.

Rule #2: Only subject with valid purpose is allowed to come in. Check today supplement materials."
autowrap_mode = 2

[node name="NextPageButton" type="Button" parent="Page3-4"]
layout_mode = 0
offset_left = 366.0
offset_top = 232.0
offset_right = 398.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PreviousPageButton" type="Button" parent="Page3-4"]
layout_mode = 0
offset_left = -2.0
offset_top = 232.0
offset_right = 30.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PageCount" type="Label" parent="Page3-4"]
layout_mode = 0
offset_left = 94.0
offset_top = 240.0
offset_right = 104.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "3
"
horizontal_alignment = 1

[node name="PageCount2" type="Label" parent="Page3-4"]
layout_mode = 0
offset_left = 286.0
offset_top = 240.0
offset_right = 296.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "4
"
horizontal_alignment = 1

[node name="Page5-6" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_gh52f")

[node name="Label3" type="Label" parent="Page5-6"]
layout_mode = 0
offset_left = 14.0
offset_top = 40.0
offset_right = 182.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 10
autowrap_mode = 2

[node name="NextPageButton" type="Button" parent="Page5-6"]
layout_mode = 0
offset_left = 366.0
offset_top = 232.0
offset_right = 398.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PreviousPageButton" type="Button" parent="Page5-6"]
layout_mode = 0
offset_left = -2.0
offset_top = 232.0
offset_right = 30.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="Label" type="Label" parent="Page5-6"]
layout_mode = 0
offset_left = 70.0
offset_top = 8.0
offset_right = 119.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Rules"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Page5-6"]
layout_mode = 0
offset_left = 278.0
offset_top = 8.0
offset_right = 327.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Rules"
horizontal_alignment = 1

[node name="PageCount" type="Label" parent="Page5-6"]
layout_mode = 0
offset_left = 94.0
offset_top = 240.0
offset_right = 104.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "5"
horizontal_alignment = 1

[node name="PageCount2" type="Label" parent="Page5-6"]
layout_mode = 0
offset_left = 286.0
offset_top = 240.0
offset_right = 296.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "6
"
horizontal_alignment = 1

[node name="Page7-8" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_gh52f")

[node name="NextPageButton" type="Button" parent="Page7-8"]
layout_mode = 0
offset_left = 366.0
offset_top = 232.0
offset_right = 398.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PreviousPageButton" type="Button" parent="Page7-8"]
layout_mode = 0
offset_left = -2.0
offset_top = 232.0
offset_right = 30.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="Label" type="Label" parent="Page7-8"]
layout_mode = 0
offset_left = 46.0
offset_top = 8.0
offset_right = 152.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Terminology"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Page7-8"]
layout_mode = 0
offset_left = 246.0
offset_top = 8.0
offset_right = 352.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Terminology"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Page7-8"]
layout_mode = 0
offset_left = 14.0
offset_top = 40.0
offset_right = 182.0
offset_bottom = 232.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 10
autowrap_mode = 2

[node name="PageCount" type="Label" parent="Page7-8"]
layout_mode = 0
offset_left = 94.0
offset_top = 240.0
offset_right = 104.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "7"
horizontal_alignment = 1

[node name="PageCount2" type="Label" parent="Page7-8"]
layout_mode = 0
offset_left = 286.0
offset_top = 240.0
offset_right = 296.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "8"
horizontal_alignment = 1

[node name="Page9-10" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_gh52f")

[node name="NextPageButton" type="Button" parent="Page9-10"]
layout_mode = 0
offset_left = 366.0
offset_top = 232.0
offset_right = 398.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="PreviousPageButton" type="Button" parent="Page9-10"]
layout_mode = 0
offset_left = -2.0
offset_top = 232.0
offset_right = 30.0
offset_bottom = 256.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_530yy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_xpwve")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_h0jec")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mbhsw")
theme_override_styles/focus = SubResource("StyleBoxEmpty_l64f3")
flat = true

[node name="Label" type="Label" parent="Page9-10"]
layout_mode = 0
offset_left = 14.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "Local map"

[node name="Label2" type="Label" parent="Page9-10"]
layout_mode = 0
offset_left = 248.0
offset_top = 112.0
offset_right = 354.0
offset_bottom = 159.0
theme_override_colors/font_color = Color(0.329412, 0.329412, 0.329412, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
text = "WIP
Sorry :(("

[node name="PageCount" type="Label" parent="Page9-10"]
layout_mode = 0
offset_left = 94.0
offset_top = 240.0
offset_right = 104.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "9"
horizontal_alignment = 1

[node name="PageCount2" type="Label" parent="Page9-10"]
layout_mode = 0
offset_left = 286.0
offset_top = 240.0
offset_right = 296.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_qub8w")
theme_override_font_sizes/font_size = 8
text = "10"
horizontal_alignment = 1

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="Cover/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="Page1-2/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="Page1-2/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="pressed" from="Page3-4/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="Page3-4/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="pressed" from="Page5-6/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="Page5-6/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="pressed" from="Page7-8/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="Page7-8/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="pressed" from="Page9-10/NextPageButton" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="Page9-10/PreviousPageButton" to="." method="_on_previous_page_button_pressed"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
